// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / Pill Basic Pill 1`] = `
.c0 {
  display: inline-block;
  padding: 0 4px;
  box-sizing: border-box;
  background: #FFFFFF;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.21);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

<div
  className="c0"
>
  <span
    className="Typography__Span-sc-10mju41-0 c1"
  >
    OMXS30
  </span>
   
  <span
    className="Typography__Span-sc-10mju41-0 c2"
  >
    1567
  </span>
</div>
`;

exports[`Storyshots Atoms / Pill Pill with colored bar 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c1 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  stroke: #6E6E69;
}

.c0 {
  display: inline-block;
  padding: 0 4px;
  box-sizing: border-box;
  background: #FFFFFF;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.21);
  border-left: 2px solid #336BFF;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <button
        className="c3 c4"
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c5"
        >
          <span
            className="Typography__Span-sc-10mju41-0 c6"
          >
            Bollinger
          </span>
           
          <span
            className="Typography__Span-sc-10mju41-0 c7"
          >
            1234
          </span>
        </span>
      </button>
    </div>
    <div
      className="c2"
    >
      <button
        className="c3 c4"
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c5"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              className="c9"
              d="m 1 1 l 22 22 m -22 0 l 22 -22"
              strokeWidth={2}
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / Pill Pill with no padding 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  background: #FFFFFF;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.21);
  border-left: 2px solid #F5F5F5;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

<div
  className="c0"
>
  <span
    className="Typography__Span-sc-10mju41-0 c1"
  >
    OMXS30
  </span>
   
  <span
    className="Typography__Span-sc-10mju41-0 c2"
  >
    1567
  </span>
</div>
`;

exports[`Storyshots Atoms / Pill Rounded Pill 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c4 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c7 {
  color: #212121;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c1,
.c1[type='button'],
.c1[type='reset'],
.c1[type='submit'] {
  -webkit-appearance: button;
}

.c1::-moz-focus-inner,
.c1[type='button']::-moz-focus-inner,
.c1[type='reset']::-moz-focus-inner,
.c1[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c1:-moz-focusring,
.c1[type='button']:-moz-focusring,
.c1[type='reset']:-moz-focusring,
.c1[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  opacity: 0;
  margin-bottom: 1px;
  -webkit-transition: opacity 0.2s ease-in;
  transition: opacity 0.2s ease-in;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  background: #F5F5F5;
  border-radius: 100px;
  padding: 2px 12px;
}

.c0:hover .c8 {
  opacity: 1;
}

.c6 {
  border-radius: 100%;
  height: 8px;
  width: 8px;
  background-color: #336BFF;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

<div
  className="c0"
>
  <button
    className="c1 c2"
    onClick={[Function]}
    type="button"
  >
    <span
      className="Typography__Span-sc-10mju41-0 c3"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          />
        </div>
        <div
          className="c5"
        >
          OMXS30
        </div>
        <div
          className="c5"
        >
          <svg
            aria-hidden="true"
            className="c7 c8 c9"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M2.586 4L0 6.586 1.414 8 4 5.414 6.586 8 8 6.586 5.414 4 8 1.414 6.586 0 4 2.586 1.414 0 0 1.414 2.586 4z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </span>
  </button>
</div>
`;
